--- a/app.json
+++ b/app.json
@@ -1,14 +1,16 @@
+
 {
   "expo": {
     "name": "SmartStickApp",
     "slug": "SmartStickApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon1.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash1.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#"
+      
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -21,8 +23,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./assets/adaptative-icon1.png",
+        "backgroundColor": "#E5E5E5"
       }
     },
     "web": {
