--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
+    "expo-auth-session": "~3.5.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
